Colab を使用して作成されました

--- a/ex02.ipynb
+++ b/ex02.ipynb
@@ -13,7 +13,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "C3b3ZJHc_7kA"
+        "id": "B8MRC6GmBvbn"
       },
       "source": [
         "# 第2回 課題"
@@ -22,7 +22,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "e8ZAqjsd_7kB"
+        "id": "mAfqsjNpBvbp"
       },
       "source": [
         "以下の設問に解答し、提出せよ。"
@@ -31,7 +31,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "w7Hd1Bc3_7kC"
+        "id": "C6CZ_iPxBvbp"
       },
       "source": [
         "## 注意事項"
@@ -40,7 +40,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "6b4DZ4v9_7kC"
+        "id": "hKr2lJeyBvbq"
       },
       "source": [
         "提出場所と提出ファイル名に注意すること。**違反した場合、自動採点が行われない。また自動採点の結果を本課題の点数とし、手動での採点は行わない。提出時に自動採点が行われていることを各自で確認すること。**\n",
@@ -54,7 +54,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "9mXQDVcu_7kC"
+        "id": "Dmwzwo7hBvbq"
       },
       "source": [
         "## Q1. (40点)"
@@ -63,7 +63,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "WLza-JB-_7kC"
+        "id": "UjDl0j2JBvbq"
       },
       "source": [
         "ある国のおてんばで勇敢なお姫様はある日，部屋の壁を壊してお城を抜け出し，ギャンブルが行われている賭博場に入っていった．ところが，ギャンブルなどやったことのないお姫様は，非常に負けが込んでしまった．この状況をおもしろくないと思ったお姫様は，一体どのような仕組みでギャンブルが行われているかを調べてみた．すると，このようなギャンブルではパリミュチュエル方式と呼ばれる方式で配当が決定されていることを突き止めた．\n",
@@ -78,7 +78,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "UcBIAM5D_7kC"
+        "id": "UpjvixW6Bvbr"
       },
       "source": [
         "### `payout()`の入力(引数): ファイル名"
@@ -87,7 +87,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Va53TE3D_7kC"
+        "id": "ZjaKPEBtBvbr"
       },
       "source": [
         "入力は複数のデータセットを記したファイルの名前である．データセットの個数は100以下である．最後のデータセットの後に，入力の終わりを示す「0 0 0」からなる一行が与えられる．\n",
@@ -107,7 +107,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "5RTjEJth_7kD"
+        "id": "C_03eZQLBvbr"
       },
       "source": [
         "### `payout()`の出力(返値): リスト"
@@ -116,7 +116,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "E3kBw81__7kD"
+        "id": "8OzZJ6TIBvbr"
       },
       "source": [
         "各データセットに対し当選した投票券一枚あたりの配当金額を示す整数からなるリストを返せ．賭けに勝った人がいない場合は0を出力せよ．出力行には他の文字があってはならない．"
@@ -125,7 +125,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "rsBWFSYT_7kD"
+        "id": "xtAer1g0Bvbr"
       },
       "source": [
         "### 入力ファイル例"
@@ -134,7 +134,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Z6sbxMvz_7kD"
+        "id": "tfNtxhpWBvbr"
       },
       "source": [
         "```text\n",
@@ -158,7 +158,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "7RZ4aKjN_7kD"
+        "id": "Lz0hUqTbBvbs"
       },
       "source": [
         "### 入力ファイル例に対して期待される出力"
@@ -167,7 +167,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "CDY_pDNP_7kD"
+        "id": "O2ZL_j6YBvbs"
       },
       "source": [
         "```python\n",
@@ -178,7 +178,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "MV2KrcrE_7kD"
+        "id": "bKaQDcwuBvbs"
       },
       "source": [
         "### 解答欄"
@@ -188,21 +188,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "-g1ZPa9K_7kD",
-        "outputId": "2a6d3c82-0daf-4688-c78f-133e22faece4",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "hA-kwmH6Bvbs"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[]\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "def payout(filename):\n",
         "    '''\n",
@@ -212,52 +200,42 @@
         "    Returns:\n",
         "        list: 各データセットについて選択した2人の学生の成績の差の絶対値からなるリスト\n",
         "    '''\n",
-        "    return [] # 適宜変えよ\n",
+        "    results = []\n",
         "\n",
         "    with open(filename, 'r') as file:\n",
-        "        while True:\n",
-        "            # 最初の行を読み取る\n",
-        "            line = file.readline().strip()\n",
+        "        for line in file:\n",
+        "            line = line.strip()\n",
         "            if line == \"0 0 0\":\n",
-        "                break  # 入力の終わり\n",
+        "                break\n",
         "\n",
-        "            # N (競技者数), M (優勝した競技者の番号), P (控除率) を取得\n",
-        "            N, M, P = map(int, line.split())\n",
+        "            # データセットの最初の行を解析\n",
+        "            data = list(map(int, line.split()))\n",
+        "            N, M, P = data[0], data[1], data[2]\n",
+        "            votes = [int(file.readline().strip()) for _ in range(N)]\n",
         "\n",
-        "            # 各競技者への投票券の枚数を取得\n",
-        "            votes = []\n",
-        "            for _ in range(N):\n",
-        "                votes.append(int(file.readline().strip()))\n",
+        "            # 投票金額の合計\n",
+        "            total_bets = sum(votes) * 100  # 1枚100ゴールド\n",
         "\n",
-        "            # 総投票金額を計算 (1票 100 ゴールド)\n",
-        "            total_bet = sum(votes) * 100\n",
+        "            # 控除金額を計算\n",
+        "            deduction = total_bets * P // 100\n",
+        "            pool = total_bets - deduction\n",
         "\n",
-        "            # 控除率を適用して残る金額を計算\n",
-        "            remaining_amount = total_bet * (100 - P) // 100\n",
-        "\n",
-        "            # 優勝者に投票された票数\n",
+        "            # 当選者の投票数\n",
         "            winning_votes = votes[M - 1]\n",
         "\n",
-        "            # 配当金額を計算\n",
         "            if winning_votes == 0:\n",
-        "                payout_per_ticket = 0\n",
+        "                results.append(0)\n",
         "            else:\n",
-        "                payout_per_ticket = remaining_amount // winning_votes\n",
+        "                payout_per_ticket = pool // winning_votes\n",
+        "                results.append(payout_per_ticket)\n",
         "\n",
-        "            # 結果を追加\n",
-        "            results.append(payout_per_ticket)\n",
-        "\n",
-        "    return results\n",
-        "\n",
-        "# テストのための入力ファイル名\n",
-        "filename = 'input.txt'\n",
-        "print(payout(filename))\n"
+        "    return results\n"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "omayt9FF_7kD"
+        "id": "saNaef6ZBvbt"
       },
       "source": [
         "## Q2. (40点)"
@@ -266,7 +244,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "EkZfHbvZ_7kD"
+        "id": "h4qiQTdaBvbt"
       },
       "source": [
         "山口東京理科大学のK先生は，プログラミング教育の新しい方法を考案した．この方法が有効かどうかを確認するために，対照実験を行うことにした． 2人の学生を被験者として，一方を従来の方法で教え，もう一方を新しい方法で教える． 2人の最終的な成績を比べれば，新しい方法が有効かどうか判定できるだろう．\n",
@@ -277,7 +255,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "UruahO5u_7kE"
+        "id": "NsR1azInBvbt"
       },
       "source": [
         "### `minimum_diff()`の入力(引数): ファイル名"
@@ -286,7 +264,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Fe7zjGzC_7kE"
+        "id": "BwzOO3haBvbt"
       },
       "source": [
         "入力は複数のデータセットを記したファイルの名前である． 各データセットは次の形式で表される．\n",
@@ -304,7 +282,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "h_VzVW_y_7kE"
+        "id": "WXjAKvAeBvbt"
       },
       "source": [
         "### `minimum_diff()`の出力(返値): リスト"
@@ -313,7 +291,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "-s1I1lft_7kE"
+        "id": "HHs8u8lvBvbt"
       },
       "source": [
         "各データセットについて，成績の差が最小の2人の学生を選び， その差の絶対値を並べたリストを返せ。"
@@ -322,7 +300,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "wtunrbRx_7kE"
+        "id": "eBm53QaZBvbt"
       },
       "source": [
         "### 入力ファイル例"
@@ -331,7 +309,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "uNonrVdj_7kE"
+        "id": "cohjDPBbBvbu"
       },
       "source": [
         "```text\n",
@@ -348,7 +326,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "_TuI6cWT_7kE"
+        "id": "EmHIIH7uBvbu"
       },
       "source": [
         "### 入力ファイル例に対して期待される出力"
@@ -357,7 +335,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "dJFFUVaD_7kE"
+        "id": "UO4m_sHABvbu"
       },
       "source": [
         "```python\n",
@@ -368,7 +346,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ekGKhV8a_7kE"
+        "id": "C5mSjpBPBvbu"
       },
       "source": [
         "### 解答欄"
@@ -376,23 +354,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
-        "id": "ZtB0QWim_7kE",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "8ee35993-8541-4ff8-873e-5949ceb5dfcf"
+        "id": "0O5ryllABvbu"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[]\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "def minimum_diff(filename):\n",
         "    '''\n",
@@ -402,42 +368,14 @@
         "    Returns:\n",
         "        list: 各データセットについて選択した2人の学生の成績の差の絶対値からなるリスト\n",
         "    '''\n",
-        "    return [] # 適宜変えよ\n",
-        "\n",
-        "    with open(filename, 'r') as file:\n",
-        "        while True:\n",
-        "            # 学生の人数を取得\n",
-        "            n = int(file.readline().strip())\n",
-        "            if n == 0:\n",
-        "                break  # 入力の終わり\n",
-        "\n",
-        "            # 学生の成績リストを取得\n",
-        "            scores = list(map(int, file.readline().strip().split()))\n",
-        "\n",
-        "            # 成績をソート\n",
-        "            scores.sort()\n",
-        "\n",
-        "            # 最小差を求める\n",
-        "            min_diff = float('inf')\n",
-        "            for i in range(n - 1):\n",
-        "                diff = scores[i + 1] - scores[i]\n",
-        "                if diff < min_diff:\n",
-        "                    min_diff = diff\n",
-        "\n",
-        "            # 結果をリストに追加\n",
-        "            results.append(min_diff)\n",
-        "\n",
-        "    return results\n",
-        "\n",
-        "# テストのための入力ファイル名\n",
-        "filename = 'input.txt'\n",
-        "print(minimum_diff(filename))\n"
+        "    return []\n",
+        "\n"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "LuMyp9L7_7kE"
+        "id": "8O5MvP5pBvbu"
       },
       "source": [
         "## Q3. (20点)"
@@ -446,7 +384,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "yRd1LMkt_7kE"
+        "id": "SySIcqOxBvbu"
       },
       "source": [
         "K先生は， \"m\"，\"c\"，\"x\"，\"i\" の4個の文字と \"2\"，\"3\"，\"4\"，\"5\"，\"6\"，\"7\"，\"8\"，\"9\" の8個の数字を 使った整数値の新しい表記法を考案した． 数字の \"0\" と \"1\" は使用しない．\n",
@@ -467,7 +405,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "SzNJQheC_7kE"
+        "id": "xDS4Z4F-Bvbu"
       },
       "source": [
         "### `mcxi_sum()`の入力(引数): ファイル名"
@@ -476,7 +414,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "MPILz6jv_7kE"
+        "id": "NTxZSYblBvbv"
       },
       "source": [
         "入力はファイル名であり、ファイルの内容は次のようになっている．先頭$n$は500以下の正の十進整数であり， それに続く行数を表す． 第$k+1$行は，$k$番目の計算指示を表す ($k=1，\\dots，n$)．\n",
@@ -499,7 +437,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "KPe0pn9o_7kE"
+        "id": "BwCFbFyTBvbv"
       },
       "source": [
         "### `mcxi_sum()`の出力(返値): MCXI文字列のリスト"
@@ -508,7 +446,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "GHaG9g3v_7kE"
+        "id": "ctt-PYv0Bvbv"
       },
       "source": [
         "各計算指示についてのMCXI文字列を収めたリストを返せ． ただし，そのMCXI値は， 計算指示中の2個のMCXI文字列のMCXI値の和である． 出力は空白などの余分な文字を含まないこと．"
@@ -517,7 +455,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "S5sSNB0W_7kE"
+        "id": "-GKgpBrSBvbv"
       },
       "source": [
         "### 入力ファイル例"
@@ -526,7 +464,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ggvFqw-7_7kE"
+        "id": "d4CRKg_rBvbv"
       },
       "source": [
         "```text\n",
@@ -547,7 +485,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "OGqNRQ0C_7kF"
+        "id": "omvtmvJFBvbv"
       },
       "source": [
         "### 入力ファイル例に対して期待される出力"
@@ -556,7 +494,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "9PjDknPn_7kF"
+        "id": "qeuJYt5_Bvbv"
       },
       "source": [
         "```python\n",
@@ -567,7 +505,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "npcX5YaZ_7kF"
+        "id": "afBdJGOXBvbv"
       },
       "source": [
         "### 解答欄"
@@ -575,23 +513,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
-        "id": "EhEFRhqB_7kJ",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "a283597d-acaf-4283-b1a0-1c6111f3afdd"
+        "id": "pNXzlMTABvb5"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[]\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "def mcxi_sum(filename):\n",
         "    '''\n",
@@ -601,32 +527,24 @@
         "    Returns:\n",
         "        list: 各計算指示について計算した結果のmcxi文字列を収めたリスト\n",
         "    '''\n",
-        "    return [] # 適宜変えよ\n",
+        "    return []\n",
         "\n",
         "    with open(filename, 'r') as file:\n",
-        "        n = int(file.readline().strip())  # データセットの数を取得\n",
+        "        # 最初の行は計算指示の数\n",
+        "        num_instructions = int(file.readline().strip())\n",
         "\n",
-        "        for _ in range(n):\n",
-        "            mcxi1, mcxi2 = file.readline().strip().split()\n",
+        "        # 各計算指示を処理する\n",
+        "        for _ in range(num_instructions):\n",
+        "            line = file.readline().strip()\n",
+        "            mcxi1, mcxi2 = line.split()\n",
         "\n",
-        "            # 2つのMCXI表記文字列を数値に変換\n",
-        "            value1 = mcxi_to_value(mcxi1)\n",
-        "            value2 = mcxi_to_value(mcxi2)\n",
+        "            # 各MCXI文字列を整数に変換し、その合計を求める\n",
+        "            sum_value = mcxi_to_int(mcxi1) + mcxi_to_int(mcxi2)\n",
         "\n",
-        "            # 数値の和を計算\n",
-        "            total_value = value1 + value2\n",
+        "            # 合計値をMCXI文字列に変換してリストに追加する\n",
+        "            results.append(int_to_mcxi(sum_value))\n",
         "\n",
-        "            # 和をMCXI表記に変換\n",
-        "            result_mcxi = value_to_mcxi(total_value)\n",
-        "\n",
-        "            # 結果をリストに追加\n",
-        "            results.append(result_mcxi)\n",
-        "\n",
-        "    return results\n",
-        "\n",
-        "# テストのための入力ファイル名\n",
-        "filename = 'input.txt'\n",
-        "print(mcxi_sum(filename))"
+        "    return results"
       ]
     }
   ],
