Colab を使用して作成されました

--- a/ex02.ipynb
+++ b/ex02.ipynb
@@ -513,7 +513,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "id": "pNXzlMTABvb5"
       },
@@ -527,22 +527,30 @@
         "    Returns:\n",
         "        list: 各計算指示について計算した結果のmcxi文字列を収めたリスト\n",
         "    '''\n",
-        "    return []\n",
+        "    results = []\n",
         "\n",
-        "    with open(filename, 'r') as file:\n",
-        "        # 最初の行は計算指示の数\n",
-        "        num_instructions = int(file.readline().strip())\n",
+        "    try:\n",
+        "        # ファイルの読み込み\n",
+        "        with open(filename, 'r') as file:\n",
+        "            # 最初の行は計算指示の数\n",
+        "            num_instructions = int(file.readline().strip())\n",
         "\n",
-        "        # 各計算指示を処理する\n",
-        "        for _ in range(num_instructions):\n",
-        "            line = file.readline().strip()\n",
-        "            mcxi1, mcxi2 = line.split()\n",
+        "            # 各計算指示を処理する\n",
+        "            for _ in range(num_instructions):\n",
+        "                line = file.readline().strip()\n",
+        "                mcxi1, mcxi2 = line.split()\n",
         "\n",
-        "            # 各MCXI文字列を整数に変換し、その合計を求める\n",
-        "            sum_value = mcxi_to_int(mcxi1) + mcxi_to_int(mcxi2)\n",
+        "                # 各MCXI文字列を整数に変換し、その合計を求める\n",
+        "                sum_value = mcxi_to_int(mcxi1) + mcxi_to_int(mcxi2)\n",
         "\n",
-        "            # 合計値をMCXI文字列に変換してリストに追加する\n",
-        "            results.append(int_to_mcxi(sum_value))\n",
+        "                # 合計値をMCXI文字列に変換してリストに追加する\n",
+        "                results.append(int_to_mcxi(sum_value))\n",
+        "\n",
+        "    except FileNotFoundError:\n",
+        "        print(f\"Error: {filename} が見つかりません\")\n",
+        "\n",
+        "    except Exception as e:\n",
+        "        print(f\"Error: {str(e)}\")\n",
         "\n",
         "    return results"
       ]
