Colab を使用して作成されました

--- a/ex02.ipynb
+++ b/ex02.ipynb
@@ -354,7 +354,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "0O5ryllABvbu"
       },
@@ -369,7 +369,29 @@
         "        list: 各データセットについて選択した2人の学生の成績の差の絶対値からなるリスト\n",
         "    '''\n",
         "    return []\n",
-        "\n"
+        "\n",
+        "    with open(filename, 'r') as file:\n",
+        "        while True:\n",
+        "            # 最初の行から学生の人数を取得\n",
+        "            n = int(file.readline().strip())\n",
+        "            if n == 0:\n",
+        "                break\n",
+        "            # 成績の行を取得\n",
+        "            scores = list(map(int, file.readline().strip().split()))\n",
+        "            # 成績をソートする\n",
+        "            scores.sort()\n",
+        "            # 最小の差を探す\n",
+        "            min_diff = float('inf')\n",
+        "            for i in range(1, n):\n",
+        "                diff = scores[i] - scores[i - 1]\n",
+        "                if diff < min_diff:\n",
+        "                    min_diff = diff\n",
+        "            results.append(min_diff)\n",
+        "\n",
+        "    return results\n",
+        "\n",
+        "    result = minimum_diff('input.txt')\n",
+        "    print(result)"
       ]
     },
     {
@@ -513,7 +535,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "pNXzlMTABvb5"
       },
