Colab を使用して作成されました

--- a/ex02.ipynb
+++ b/ex02.ipynb
@@ -354,7 +354,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 4,
       "metadata": {
         "id": "0O5ryllABvbu"
       },
@@ -368,7 +368,7 @@
         "    Returns:\n",
         "        list: 各データセットについて選択した2人の学生の成績の差の絶対値からなるリスト\n",
         "    '''\n",
-        "    return []\n",
+        "    results = []\n",
         "\n",
         "    with open(filename, 'r') as file:\n",
         "        while True:\n",
