Colab を使用して作成されました

--- a/ex02.ipynb
+++ b/ex02.ipynb
@@ -539,7 +539,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "pNXzlMTABvb5"
       },
@@ -554,30 +554,14 @@
         "        list: 各計算指示について計算した結果のmcxi文字列を収めたリスト\n",
         "    '''\n",
         "    results = []\n",
-        "\n",
-        "    try:\n",
-        "        # ファイルの読み込み\n",
-        "        with open(filename, 'r') as file:\n",
-        "            num_instructions = int(file.readline().strip())\n",
-        "\n",
-        "            # 各計算指示を処理する\n",
-        "            for _ in range(num_instructions):\n",
-        "                line = file.readline().strip()\n",
-        "                mcxi1, mcxi2 = line.split()\n",
-        "\n",
-        "                # 各MCXI文字列を整数に変換し、その合計を求める\n",
-        "                sum_value = mcxi_to_int(mcxi1) + mcxi_to_int(mcxi2)\n",
-        "\n",
-        "                # 合計値をMCXI文字列に変換してリストに追加する\n",
-        "                results.append(int_to_mcxi(sum_value))\n",
-        "\n",
-        "    except FileNotFoundError:\n",
-        "        print(f\"Error: {filename} が見つかりません\")\n",
-        "\n",
-        "    except Exception as e:\n",
-        "        print(f\"Error: {str(e)}\")\n",
-        "\n",
-        "    return results"
+        "    with open(filename, 'r') as file:\n",
+        "        n = int(file.readline().strip())\n",
+        "        for _ in range(n):\n",
+        "            mcxi1, mcxi2 = file.readline().strip().split()\n",
+        "            result = add_mcxi(mcxi1, mcxi2)\n",
+        "            results.append(result)\n",
+        "    return results\n",
+        ""
       ]
     }
   ],
