Colab を使用して作成されました

--- a/ex02.ipynb
+++ b/ex02.ipynb
@@ -539,12 +539,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 7,
       "metadata": {
         "id": "pNXzlMTABvb5"
       },
       "outputs": [],
       "source": [
+        "from re import L\n",
         "def mcxi_sum(filename):\n",
         "    '''\n",
         "    Parameters:\n",
@@ -553,15 +554,59 @@
         "    Returns:\n",
         "        list: 各計算指示について計算した結果のmcxi文字列を収めたリスト\n",
         "    '''\n",
-        "    results = []\n",
-        "    with open(filename, 'r') as file:\n",
-        "        n = int(file.readline().strip())\n",
-        "        for _ in range(n):\n",
-        "            mcxi1, mcxi2 = file.readline().strip().split()\n",
-        "            result = add_mcxi(mcxi1, mcxi2)\n",
-        "            results.append(result)\n",
-        "    return results\n",
-        ""
+        "    with open(filename, 'r')  as file:\n",
+        "        lines = file.readlines()\n",
+        "        n = int(lines[0].strip())\n",
+        "        results = []\n",
+        "        for i in range(1, n + 1):\n",
+        "            mcxi1, macxi2 = lines[i].strip().split()\n",
+        "            sum_value = mcxi_to_int(mcxi1) + mcxi_to_int(mcxi2)\n",
+        "            results.append(int_to_mcxi(sum_value))\n",
+        "        return results\n",
+        "\n",
+        "\n",
+        "        def mcxi_to_int(mcxi):\n",
+        "            values = {'m': 1000, 'c': 100, 'x': 10, 'i': 1}\n",
+        "            total = 0\n",
+        "            num = 0\n",
+        "            for char in mcxi:\n",
+        "                if char. isdigit():\n",
+        "                    num = int (char)\n",
+        "            else:\n",
+        "                if num == 0:\n",
+        "                    num = 1\n",
+        "                total += num * values[char]\n",
+        "                num = 0\n",
+        "            return total\n",
+        "\n",
+        "            def int_to_mcxi(value):\n",
+        "                result= []\n",
+        "                for char, val in [('m', 1000), ('c', 100), ('x', 10), ('i', 1)]:\n",
+        "                    if value >= val:\n",
+        "                        count = value // val\n",
+        "\n",
+        "            def int_to_mcxi(value):\n",
+        "                result= []\n",
+        "                for char, val in [('m', 1000), ('c', 100), ('x', 10), ('i', 1)]:\n",
+        "                    if value >= val:\n",
+        "                        count = value // val\n",
+        "                        if count > 1:\n",
+        "                            result. append (f\"{count}{char}\")\n",
+        "                        else:\n",
+        "                            result. append (char)\n",
+        "                        value %= val\n",
+        "                return ''.join(result)\n",
+        "\n",
+        "            def mcxi_sum(filename):\n",
+        "                with open(filename, ' r') as file:\n",
+        "                    lines = file.readlines()\n",
+        "                    n = int(Lines[0]. strip())\n",
+        "                    results = []\n",
+        "                    for i in range(1, n + 1):\n",
+        "                        mcxi1, mcxi2 = lines[i].strip().split()\n",
+        "                        sum_value = mcxi_to_int(mcxi1) + mcxi_to_int(mcxi2)\n",
+        "                        results.append(int_to_mcxi(sum_value))\n",
+        "                return results"
       ]
     }
   ],
