Colab を使用して作成されました

--- a/ex02.ipynb
+++ b/ex02.ipynb
@@ -539,7 +539,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 9,
       "metadata": {
         "id": "pNXzlMTABvb5"
       },
@@ -559,7 +559,7 @@
         "        n = int(lines[0].strip())\n",
         "        results = []\n",
         "        for i in range(1, n + 1):\n",
-        "            mcxi1, macxi2 = lines[i].strip().split()\n",
+        "            mcxi1, mcxi2 = lines[i].strip().split()\n",
         "            sum_value = mcxi_to_int(mcxi1) + mcxi_to_int(mcxi2)\n",
         "            results.append(int_to_mcxi(sum_value))\n",
         "        return results\n",
