--- a/ex02.ipynb
+++ b/ex02.ipynb
@@ -539,7 +539,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 14,
       "metadata": {
         "id": "pNXzlMTABvb5"
       },
@@ -599,7 +599,7 @@
         "def mcxi_sum(filename):\n",
         "    with open(filename, ' r') as file:\n",
         "       lines = file.readlines()\n",
-        "       n = int(Lines[0]. strip())\n",
+        "       n = int(lines[0]. strip())\n",
         "       results = []\n",
         "       for i in range(1, n + 1):\n",
         "           mcxi1, mcxi2 = lines[i].strip().split()\n",
